# computer-vision-technology

Topic 5. Action Recognition/: README.md  pyproject.toml  utils.py
